# shift

./: LICENSE  README.md  removedfromcabal.txt  shift.cabal
levels/: LICENSE.txt  minicosmos.txt  minicosmos02.txt  minicosmos05.txt  minicosmos06.txt  minicosmos07.txt  minicosmos08.txt  minicosmos09.txt  minicosmos10.txt  simple.txt  warn_invalidChar.txt  warn_mulplayers.txt  warn_noplayer.txt  warn_notarget.txt  warn_targetobjectMismatch.txt  warning_tests.txt
src/: GTKScenarioView.hs  Helpers.hs  LensNaming.hs  Main.hs  Scenario.hs  ScenarioController.hs  ScenarioParser.hs  ScenarioParser_old.hs
src/ShiftGame/: GTKScenarioView.hs  GtkScenarioView.hs  GtkShiftIO.hs  Helpers.hs  Scenario.hs  ScenarioController.hs  ScenarioParser.hs  ShiftIO.hs
