name: shift
version: 0.1.0.0
cabal-version: >=1.18
build-type: Simple
synopsis: Simple game to push objects into targets
license: BSD3
license-file: LICENSE
maintainer: tpajenka@foo
category: Game
author: tpajenka
data-dir: ""
extra-source-files: README.md
 
executable shift
    build-depends: base >=4.6 && <4.9, directory >= 1.0.0.0, filepath >= 1.0,
                   array -any, containers -any, template-haskell -any,
                   mtl -any, transformers -any, vector -any, enummapset-th -any,
                   attoparsec -any, bytestring -any,
                   gtk3 >=0.13, cairo -any, glib -any, lens >= 3.8
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
    ghc-options: -Wall  -threaded
--    ghc-options: -optl-mwindows
 
 
