name: shift
version: 0.1.0.0
cabal-version: >=1.18
build-type: Simple
synopsis: Simple game to push objects into targets
license: BSD3
license-file: LICENSE
maintainer: tpajenka@foo
category: Game
author: tpajenka
data-dir: ""
extra-source-files: README.md
 
executable shift
    build-depends: base >=4.6,
                   array -any, attoparsec >=0.10.0.0, bytestring -any,
                   containers -any, enummapset-th -any, lens >= 3.8, mtl >=2.0,
                   template-haskell >=2.4, transformers <0.4.0.0 || >0.4.0.0,
                   vector <0.10.9.3 || >0.10.9.3 && <0.10.12.0 || >0.10.12.0,
                   directory >=1.0.0.0, filepath >=1.0,
                   cairo >=0.13, gtk3 >=0.13, glib >=0.13
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
    ghc-options: -Wall  -threaded
--    ghc-options: -optl-mwindows
 
 
