name: shift
version: 0.1.0.0
cabal-version: >=1.18
build-type: Simple
synopsis: Simple game to push objects into targets
license: BSD3
license-file: LICENSE
maintainer: tpajenka@foo
category: Game
author: tpajenka
data-dir: ""
extra-source-files: README.md
 
executable shift
    build-depends: base >=4.6 && <4.9,
                   array >=0.4, attoparsec ==0.13.*, bytestring >=0.10.0.2 && <0.11,
                   containers >=0.5 && <0.6, enummapset-th ==0.6.*,
                   lens >=4.11 && <=4.13, mtl >=2.1.2 && <2.2,
                   template-haskell >=2.8 && <2.11, transformers >=0.3,
                   vector >=0.10.0.1 && <0.10.9.3 || >0.10.9.3 && <0.10.12.0 || >0.10.12.0,
                   directory ==1.2.*, filepath >=1.3 && <1.5,
                   cairo >=0.13, gtk3 >=0.13, glib >=0.13
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
    ghc-options: -Wall  -threaded
--    ghc-options: -optl-mwindows
 
 
